# mantle

./: .env.example  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  FUTURE.md  MANIFEST.md  README.md
.claude/: settings.json
.cursor/rules/: agents.mdc
.opencode/: AGENTS.md
brain/project/: compiled-truth.md  linked.md  open-questions.md  timeline.md
scripts/: check.sh  init.sh
template/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  FUTURE.md  README.md
template/.claude/: settings.json
template/.claude/hooks/: post-feature.sh
template/.codex/: AGENTS.md
template/.kilocode/: rules.md
template/brain/project/: compiled-truth.md  linked.md  timeline.md
template/scripts/: check.sh  log-change.sh
template/skills/: README.md
variants/: README.md
variants/nextjs/: AGENTS_APPEND.md  README.md  package.json
variants/nextjs/src/app/: layout.tsx  page.tsx
variants/python/: AGENTS_APPEND.md  README.md  pyproject.toml
variants/python/src/app/: __init__.py  __main__.py
variants/python/tests/: test_smoke.py
variants/react-vite/: AGENTS_APPEND.md  README.md  package.json  vite.config.ts
variants/react-vite/src/: App.tsx  index.css
variants/research/: AGENTS_APPEND.md  README.md  config.yaml  session-log.md
